# openprotocol-python

./: LICENSE  pyproject.toml
examples/: run_tightening.py
src/openprotocol/application/: __init__.py  base_messages.py  client.py  communication.py  parameter_set.py  parser.py  tightening.py
src/openprotocol/applications/: client.py
src/openprotocol/core/: message.py  mid_base.py
src/openprotocol/transport/: __init__.py  async_tcp.py  base.py
tests/application/: test_client.py  test_pset.py  test_tightening.py
tests/applications/: test_client.py
tests/core/: test_message.py
tests/integration/: controller.py  test_client_startup.py  test_tightening_flow.py
