[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "openprotocol"
version = "0.1.0"
description = "Python library for Open Protocol communication (e.g., tightening systems)"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
authors = [
  { name = "Tomas Krcka, Industware s.r.o, 2025", email = "tomas.krcka@industware.cloud" }
]
keywords = ["openprotocol", "industrial", "tightening", "communication", "atlascopco"]
dependencies = ["poetry-core (>=2.0.0)"]

[project.urls]
Homepage = "https://github.com/Industware-cloud/openprotocol-python"
Repository = "https://github.com/Industware-cloud/openprotocol-python"
Issues = "https://github.com/Industware-cloud/openprotocol-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

# Poetry compatibility section
[tool.poetry]
name = "openprotocol"
version = "0.1.0"
description = "Python library for Open Protocol communication (e.g., tightening systems)"
authors = ["Tomas Krcka <tomas.krcka@industware.cloud>"]
license = "MIT"
packages = [{ include = "openprotocol", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.13.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"